Se agrego semantica de la funcionabilidad de Feedback. Falta el diseño

--- a/MisTareas/pages/home/home.html
+++ b/MisTareas/pages/home/home.html
@@ -26,6 +26,15 @@
             <h1 class="titlearea win-type-ellipsis">
                 <span class="pagetitle">Welcome to TodayTasks!</span>
             </h1>
+            <section id="feedback">
+                <div>
+                    <p>Tell us what you'll like to have in this app or the things you would like to change.
+                        Your comments will help to build the app you need.
+                    </p>
+                    <textarea cols="4" rows="3" placeholder="I would like to have ..."></textarea>
+                </div>
+                <button>Feedback</button>
+            </section>
         </header>
         <section aria-label="Main content" role="main">
             <section id="leftContent">
